@@ -9,7 +9,7 @@
 ## X-Curse-Project-Name: oUF_DebuffHighlight
 ## X-Curse-Project-ID: o-uf_debuff-highlight
 ## X-Curse-Repository-ID: wow/o-uf_debuff-highlight/mainline
-## X-Curse-Packaged-Version: v3.33-28-g056308b
+## X-Curse-Packaged-Version: v3.33-29-gea0c12f
 ## X-Curse-Project-Name: ElvUI
 ## X-Curse-Project-ID: elvui
 ## X-Curse-Repository-ID: wow/elvui/mainline
