@@ -3,7 +3,7 @@
 ## Notes: Raid debuff mod for oUF
 ## Version: 1.2
 ## OptionalDeps: oUF
-## X-Curse-Packaged-Version: v3.33-28-g056308b
+## X-Curse-Packaged-Version: v3.33-29-gea0c12f
 ## X-Curse-Project-Name: ElvUI
 ## X-Curse-Project-ID: elvui
 ## X-Curse-Repository-ID: wow/elvui/mainline
