@@ -726,3 +726,12 @@ L["Your current resolution is %s, this is considered a %s resolution."] = "Your 
 L["Your items have been repaired for: "] = "Your items have been repaired for: "
 L["Your items have been repaired using guild bank funds for: "] = "Your items have been repaired using guild bank funds for: "
 L["Your version of ElvUI is out of date. You can download the latest version from www.curse.com"] = "Your version of ElvUI is out of date. You can download the latest version from www.curse.com"
+L['BAGS_DESC'] = 'Adjust bag settings for ElvUI.';
+L['Bag Columns'] = 'Bag Columns';
+L['Number of columns (width) of bags. Set it to 0 to match the width of the chat panels.'] = 'Number of columns (width) of bags. Set it to 0 to match the width of the chat panels.';
+L['Bank Columns'] = 'Bank Columns';
+L['Number of columns (width) of the bank. Set it to 0 to match the width of the chat panels.'] = 'Number of columns (width) of the bank. Set it to 0 to match the width of the chat panels.';
+L['Sort Orientation'] = 'Sort Orientation';
+L['Direction the bag sorting will use to allocate the items.'] = 'Direction the bag sorting will use to allocate the items.';
+L['Bottom to Top'] = 'Bottom to Top';
+L['Top to Bottom'] = 'Top to Bottom';
