@@ -2,7 +2,7 @@ local E, L, P, G = unpack(select(2, ...)); --Inport: Engine, Locales, ProfileDB,
 local S = E:GetModule('Skins')
 
 local function LoadSkin()
-	if E.global.skins.blizzard.enable ~= true or E.global.skins.blizzard.bags ~= true or E.global.general.bags then return end
+	if E.global.skins.blizzard.enable ~= true or E.global.skins.blizzard.bags ~= true or E.global.bags.enable then return end
 	
 	local QUEST_ITEM_STRING = select(10, GetAuctionItemClasses())
 	
