@@ -10,9 +10,15 @@
 *Add skin for the Blizzard Guild Invite Frame.
 *Add a button to the right click menu of someones name in chat. This allows you to copy that specific line of chat of the person you right clicked.
 *Add option to player unitframe's castbar section to display the current target on the castbar. (Default is Off)
+*Add option to the Bags Module to change the amount of columns displayed for the Bags Frame
+*Add option to the Bags Module to change the amount of columns displayed for the Bank Frame
+*Add option to the Bags Module to change the sort orientation. This can be set to BOTTOM-TOP or TOP-BOTTOM
+*Add option to the Bags Module to change the xOffset of both the bags and bank frame.
+*Add option to the Bags Module to change the yOffset of both the bags and bank frame.
 
 [b]General Changes[/b]
 *The In-Game config has recieved a bit of a overhaul to make finding stuff a little easier.
+*The Bags module now has its own category inside the In-Game Config.
 *Removed the experimental Profile Binds option. See: http://wow.curseforge.com/addons/elvui/tickets/258-improvements-to-profile-binds/#comments
 *Add currency information to the bags datatext tooltip.
 *UIScale must be changed by at least 1% in order to recieve a UIScale popup warning to reload.
